# dict-patterns

./: Makefile  pyproject.toml  readme.md
src/json_patterns/: __init__.py  exceptions.py  json_matcher.py  patterns.py
tests/: test_dict_matcher.py  test_json_matcher.py  test_patterns.py  test_plugin.py
