[project]
name = "json-patterns"
version = "0.1.0"
description = "A template engine for JSON data – useful for tests!"
readme = "readme.md"
authors = [
    { name = "Antonio Feregrino", email = "antonio.feregrino@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.1",
]
